--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
-    <h1>"Nursey" - Healthcare Chatbot created by Pranay Rewane</h1>
+    <h1>"Nursey" - Healthcare Chatbot </h1>
     <br>
-    <h3><a href="https://github.com/PranayRewane">click here to goto my Github for more such cool projects</a> </h3>
+    <h3>created by Pranay Rewane</h3>
+    <br>
+    <h3><a href="https://github.com/PranayRewane">click here </a> </h3> <h3> to goto my Github for more such cool projects </h3>
     <style>
     body {
       background-image: url('static/bg.jpg');
